assets/assets/css/main.css
@charset "UTF-8";

/* Custom typeface — Inter (body text) */

/* Regular */
@font-face {
  font-family: "Inter";
  src: url("../fonts/inter-regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

/* Italic */
@font-face {
  font-family: "Inter";
  src: url("../fonts/inter-italic.woff2") format("woff2");
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}

/* Extra Bold */
@font-face {
  font-family: "Inter";
  src: url("../fonts/inter-800.woff2") format("woff2");
  font-weight: 800;
  font-style: normal;
  font-display: swap;
}

/* Extra Bold Italic */
@font-face {
  font-family: "Inter";
  src: url("../fonts/inter-800-italic.woff2") format("woff2");
  font-weight: 800;
  font-style: italic;
  font-display: swap;
}

/* Black */
@font-face {
  font-family: "Inter";
  src: url("../fonts/inter-900.woff2") format("woff2");
  font-weight: 900;
  font-style: normal;
  font-display: swap;
}

/* Custom typeface — Google Sans Code (code) */

/* Regular */
@font-face {
  font-family: "GoogleSansCode";
  src: url("../fonts/GoogleSansCode-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

/* Italic */
@font-face {
  font-family: "GoogleSansCode";
  src: url("../fonts/GoogleSansCode-Italic.woff2") format("woff2");
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}

/* Bold */
@font-face {
  font-family: "GoogleSansCode";
  src: url("../fonts/GoogleSansCode-Bold.woff2") format("woff2");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

/* Bold Italic */
@font-face {
  font-family: "GoogleSansCode";
  src: url("../fonts/GoogleSansCode-BoldItalic.woff2") format("woff2");
  font-weight: 700;
  font-style: italic;
  font-display: swap;
}

/* Custom typeface — Perfect Time (logo) */

@font-face {
  font-family: "Perfect Time";
  src: url("../fonts/perfect-time.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: block;
}

/* Global styles */

:root {
  color-scheme: dark light;
  /* I don't think this is even 
  necessary in my case, 
  but it's here I guess */
  --main-color: #161616;
  --bg-color: #f3f3f3;
  --neutral-color: rgba(153, 153, 153, 0.2);
  --link-color: #0069d9;
  --thin-border: 0.07rem solid var(--main-color);
  --thick-border: 0.1rem solid var(--main-color);
  --rounded-edges: 0.5em;
  --focus-outline: 0.1rem solid var(--link-color);
}

@media (prefers-color-scheme: dark) {
  /* this is for initial color theme based on browser theme preference */
  html:not([data-theme]) {
    color-scheme: dark;
    --main-color: #dedede;
    --bg-color: #2b2b2b;
    --link-color: #ff5faa;
    #guestbook {
      filter: invert(1);
      mix-blend-mode: lighten;
    }
    #theme-toggle > img {
      transform: translateX(1.2em);
    }
    .icon {
      color: var(--bg-color); /* alt text color */
      filter: invert(1);
    }
    a:has(> .icon) {
      text-decoration-color: var(--bg-color);
    }
    .text-colored {
      color: greenyellow;
    }
  }
  html:not([data-theme])[dir="rtl"] {
    #theme-toggle > img {
      transform: translateX(-1.2em);
    }
  }
}

html[data-theme="dark"] {
  color-scheme: dark;
  --main-color: #dedede;
  --bg-color: #2b2b2b;
  --link-color: #ff5faa;
  #guestbook {
    filter: invert(1);
    mix-blend-mode: lighten;
  }
  #theme-toggle > img {
    transform: translateX(1.2em);
  }
  .icon {
    color: var(--bg-color); /* alt text color */
    filter: invert(1);
  }
  a:has(> .icon) {
    text-decoration-color: var(--bg-color);
  }
  .text-colored {
    color: greenyellow;
  }
}

html[data-theme="dark"][dir="rtl"] {
  #theme-toggle > img {
    transform: translateX(-1.2em);
  }
}

html[dir="rtl"] {
  /* This shit so weird low key
  and I probably don't even need it,
  I mean how much ARABS are actually
  looking at my site??? */
  #scroll-to-top {
    transform: translateX(-22.8em);
    @media (max-width: 820px) {
      inset-inline-end: 0.5em;
      transform: revert;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  html {
    scroll-behavior: smooth;
  }
}

body {
  background-color: var(--bg-color);
  color: var(--main-color);
  font-family: "Inter", "Segoe UI", sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 160%;
  text-wrap: pretty; /* not supported in Firefox atm*/
  scrollbar-gutter: stable;
  overflow-y: scroll;
}

* {
  margin: 0;
  transition: all 0.3s;
  scrollbar-color: gray var(--bg-color);
}

.noscript > p {
  padding: 1em;
  color: rgb(170, 0, 0);
  background-color: rgb(255, 221, 221);
  text-align: center;
}

#skip-link {
  position: absolute;
  inset-inline-start: -10000px;
  inset-block-start: auto;
  inline-size: 1px;
  block-size: 1px;
  overflow: hidden;
  &:focus-visible {
    position: fixed;
    inset-block-start: 0.1em;
    inset-inline-start: 0.1em;
    inline-size: auto;
    block-size: auto;
    z-index: 999;
  }
}

/* Layout */

#flex-container {
  display: flex;
  gap: 3em;
  padding: 3em;
  margin: 0 auto;
  max-inline-size: fit-content;
  @media (max-width: 1200px) {
    flex-direction: column;
    gap: 2em;
    padding: 0;
  }
}

#left-column,
#right-column {
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  white-space: nowrap;
  padding: 0 0.5em;
  position: sticky;
  inset-block-start: 3em;
  inline-size: 11em;
  /* code for vertical scrollbar to appear when needed */
  max-block-size: calc(100vh - 7em);
  overflow-y: auto;
  overflow-x: hidden;
  scrollbar-width: thin;
  @media (max-width: 1200px) {
    overflow-y: revert;
    overflow-x: revert;
  }
}

#mobile-topbar {
  display: none;
  @media (max-width: 1200px) {
    display: flex;
    justify-content: space-between;
    align-items: center;
    inline-size: 100%;
    background-color: var(--bg-color);
    border-block-end: 0.07em solid var(--neutral-color);
    position: sticky;
    inset-block-start: 0;
    padding: 1em 0;
    z-index: 997;
  }
}
/* ... */

